Release WIP: Released WIP for Token Consumption Stats in the DB. Indexes, DB, Repo, Service, Mapper, DTO, Entity all released. Modified the Direct LLM APIs and Agent pipeline with token stats udpate per request. Embedding pipeline also added the Agent P API. Controller for stats yet to be released.